--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "desarrolla2/rss-client-bundle": "dev-master"
+        "desarrolla2/rss-client": "dev-master",
+        "desarrolla2/twitter-client": "dev-master"
     },
     "autoload": {
         "psr-0": {
