--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "desarrolla2/twitter-client": "*"
+        "desarrolla2/twitter-client": "2.*"
     },
     "autoload": {
         "psr-0": {
